test/errors/nonlocal_missing_binding_walrus.py
def outer():
    def inner():
        nonlocal x
        [x := i for i in range(3)]

    inner()
